# silver-platter

./: .bzrignore  .codespellrc  .flake8  .gitignore  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  Cargo.toml  MANIFEST.in  Makefile  NEWS  PKG-INFO  README.md  README.python.md  README.rst  TODO  autopropose.py  blacklist  codemod-protocol.md  codemod-protocol.rst  debian-svp  disperse.conf  disperse.toml  download-lintian-log.py  fixer.txt  lintian_brush.py  policy.conf  policy.proto  propose-lintian-fixes.py  propose-new-upstream.py  pyproject.toml  recipe.example.yaml  releaser.conf  run-lintian-fixers.py  run.py  rustc-ice-2025-07-16T11_16_39-390929.txt  rustc-ice-2025-07-16T11_19_49-395450.txt  rustc-ice-2025-07-16T11_22_15-399869.txt  schedule.py  setup.cfg  (+7 more)
.github/: dependabot.yml
.github/workflows/: coverage.yml  disperse.yml  pythonpackage.yml  rust.yml  wheels.yaml
crates/svp-client/: Cargo.toml
crates/svp-client/src/: lib.rs
crates/svp-py/: Cargo.toml
crates/svp-py/src/: lib.rs
debian/: .gitignore  changelog  control  copyright  manpages  rules  silver-platter.lintian-overrides  watch
debian/cargo_home/: config.toml
debian/patches/: breezy-init.diff  fix-bin  fix-cargo  newer-launchpadlib  newer-lazy-regex  older-clap  older-pyo3-log  older-rand  older-xdg  relax-lazy-regex  relax-lazy-static  relax-reqwest  relax-serde-json  series  ship-submodules
debian/source/: options
debian/tests/: control  testsuite
debian/upstream/: metadata  signing-key.asc
devnotes/: bulk.rst  codemods.rst  command-line.rst  design.rst  mp-status.rst  mutators.rst  scheduling.rst  state.rst  udd.rst
examples/: candidates.yaml  codespell.yaml  framwork.yaml  isort.yaml  python-modernize.yaml  pyupgrade.yaml  teyit.yaml
examples/debian/: cme.yaml  debianize.yaml  mia.yaml  new-upstream-release.yaml  new-upstream-snapshot.yaml  orphan.yaml  rrr.yaml
examples/recipes/: codespell.yaml  disperse-migrate.yaml  framwork.yaml  isort.yaml  patch.yaml  python-modernize.yaml  pyupgrade.yaml  teyit.yaml
examples/recipes/debian/: base.md  debianize.yaml  lintian-brush.yaml  mia.yaml  multiarch.yaml  new-upstream-release.yaml  scrub-obsolete.yaml
fixers/: control-file-with-CRLF-EOLs.sh  copyright-has-crs.sh  debian-upstream-obsolete-path.sh  debian-watch-uses-insecure-uri.sh  homepage-field-uses-insecure-uri.sh  insecure-copyright-format-uri.sh  missing-debian-source-format.sh  out-of-date-copyright-format-uri.sh  package-uses-deprecated-source-override-location.sh  quilt-series-without-trailing-newline.sh  unnecessary-testsuite-autopkgtest-field.sh  vcs-field-uses-insecure-uri.sh  vcs-field-uses-not-recommended-uri-format.sh  wrong-debian-qa-group-name.sh  xs-testsuite-field-in-debian-control.sh  xs-vcs-field-in-debian-control.sh
fixers/lintian/: ancient-python-version-field.sh  debian-rules-should-not-use-pwd.sh  debian-upstream-obsolete-path.sh  debian-watch-uses-insecure-uri.sh  dm-upload-allowed-is-obsolete.sh  file-contains-trailing-whitespace.sh  homepage-field-uses-insecure-uri.sh  insecure-copyright-format-uri.sh  malformed-dm-upload-allowed.sh  out-of-date-copyright-format-uri.sh  package-uses-deprecated-source-override-location.sh  xc-package-type-in-debian-control.sh
helpers/: download-lintian-log.py  needs-changelog-update.py  propose-lintian-fixes.py  schedule-lintian-fixes.py  upload-pending.py
man/: debian-svp.1  svp.1
py/: silver_platter.pyi
py/silver_platter/: __init__.py  candidates.py  probers.py  recipe.py  utils.py  workspace.py
py/silver_platter/debian/: __init__.py  uploader.py
py/tests/: __init__.py  test_debian.py  test_proposal.py  test_vcs.py  test_workspace.py
scripts/: apply-multiarch-hints  backport  deb-import-uncommitted  deb-scrub-obsolete  debianize.py  drop-mia-uploaders  lintian-brush.py  new-upstream  orphan.py  rrr
silver_platter/: __init__.py  __main__.py  apply.py  autopropose.py  batch.py  bulk.py  candidates.py  changer.py  debian.py  probers.py  proposal.py  publish.py  recipe.py  run.py  state.py  utils.py  workspace.py
silver_platter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
silver_platter/debian/: __init__.py  __main__.py  apply.py  backport.py  batch.py  changer.py  cme.py  debianize.py  import_upstream.py  lintian.py  merge_upstream.py  mia.py  multiarch.py  orphan.py  patch.py  policy.proto  policy.py  rrr.py  run.py  schedule.py  scrub_obsolete.py  tidy.py  udd.py  uncommitted.py  uploader.py  upstream.py
silver_platter/release/: config.proto  config.py
silver_platter/tests/: __init__.py  test_apply.py  test_debian.py  test_debian_lintian.py  test_debian_upstream.py  test_probers.py  test_proposal.py  test_publish.py  test_recipe.py  test_run.py  test_utils.py  test_version.py  test_workspace.py
src/: batch.rs  breezyshim.rs  candidates.rs  checks.rs  codemod.rs  lib.rs  mcp.rs  probers.rs  proposal.rs  publish.rs  recipe.rs  run.rs  utils.rs  vcs.rs  workspace.rs
src/debian/: bts_forge.rs  codemod.rs  mod.rs  run.rs  uploader.rs  vcswatch.rs
svp-client/: Cargo.toml
svp-client/src/: debian.rs  lib.rs
svp-py/: Cargo.toml
svp-py/src/: lib.rs
tests/: __init__.py  test_apply.py  test_candidates.py  test_debian.py  test_probers.py  test_proposal.py  test_publish.py  test_recipe.py  test_run.py  test_utils.py  test_workspace.py
wip/: ancient-python-version-field.sh  debian-pyversions-is-obsolete.sh  debian-rules-should-not-use-pwd.sh  debian-rules-uses-deprecated-makefile.sh  debian-watch-uses-insecure-uri.sh  dh-quilt-addon-but-quilt-source-format.sh  libmodule-build-perl-needs-to-be-in-build-depends.sh  newer-standards-version.sh  vcs-field-not-canonical.sh
