[package]
name = "silver-platter"
version = "0.5.40"
authors = [ "Jelmer Vernooĳ <jelmer@jelmer.uk>",]
edition = "2021"
license = "GPL-2.0+"
description = "Large scale VCS change management"
repository = "https://github.com/jelmer/silver-platter.git"
homepage = "https://github.com/jelmer/silver-platter"
default-run = "svp"
categories = ["development-tools"]

[dependencies]
tempfile = "3"
serde_yaml = ">=0.9"
log = ">=0.4"
percent-encoding = "2"
chrono = ">=0.4"
regex = "1"
debian-changelog = { workspace = true }
tera.workspace = true
clap = { workspace = true, optional = true, features = ["derive", "env"] }
shlex = "1"
env_logger = { workspace = true, optional = true }
trivialdb = { version = "0.1.7", optional = true }
flate2 = { version = "1", optional = true }
reqwest = { version = ">=0.12", optional = true, features = ["blocking"] }
lazy-regex = ">=2"
libc = "0.2"
xdg = "2.5"
debian-analyzer = { version = ">=0.158.19", optional = true }
#debian-analyzer = { path = "../lintian-brush/analyzer", optional = true }
gpgme = { version = "0.11.0", optional = true }
pyo3 = { optional = true, workspace = true }
lazy_static = "1.5.0"
debian-control = { version = ">=0.1", optional = true }
rand = "0.8.5"

[workspace]
members = [ "svp-client", "svp-py" ]

[features]
default = ["debian", "detect-update-changelog"]
debian = ["dep:debversion", "dep:flate2", "dep:reqwest", "dep:pyo3", "dep:debian-control", "breezyshim/debian", "dep:debian-analyzer"]
gpg = ["dep:gpgme"]
last-attempt-db = ["dep:trivialdb"]
detect-update-changelog = ["debian"]
cli = ["dep:clap", "dep:env_logger"]
pyo3 = ["dep:pyo3"]

[dependencies.serde]
workspace = true
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.breezyshim]
workspace = true

[dependencies.debversion]
version = ">=0.1"
features = ["python-debian", "serde"]
optional = true

[dependencies.url]
workspace = true
features = [ "serde",]

[workspace.dependencies]
pyo3 = ">=0.22"
pyo3-log = ">=0.11"
serde_json = "1"
tera = "1"
serde = "1"
breezyshim = ">=0.1.205"
#breezyshim = { path = "../breezyshim/trunk" }
url = "2"
debian-changelog = ">=0.1.10"
env_logger = ">=0.10"
clap = "4"

[[bin]]
name = "svp"
required-features = ["cli"]

[[bin]]
name = "debian-svp"
required-features = ["debian", "cli"]
