[package]
name = "silver-platter"
version = "0.7.0"
authors = [ "Jelmer Vernooĳ <jelmer@jelmer.uk>",]
edition = "2021"
license = "GPL-2.0+"
description = "Large scale VCS change management"
repository = "https://github.com/jelmer/silver-platter.git"
homepage = "https://github.com/jelmer/silver-platter"
default-run = "svp"
categories = ["development-tools"]

[dependencies]
tempfile = "3"
serde_yaml = "0.9"
log = "0.4"
percent-encoding = "2"
chrono = "0.4"
regex = "1"
debian-changelog = { workspace = true }
tera.workspace = true
clap = { workspace = true, optional = true, features = ["derive", "env"] }
shlex = "1"
env_logger = { workspace = true, optional = true }
trivialdb = { version = "0.1.7", optional = true }
flate2 = { version = "1", optional = true }
reqwest = { version = ">=0.12,<0.13", optional = true, features = ["blocking"] }
lazy-regex = "3"
libc = "0.2"
xdg = { version = "3.0", optional = true }
debian-analyzer = { version = "0.160", optional = true }
gpgme = { version = "0.11.0", optional = true }
lazy_static = "1.5.0"
debian-control = { version = "0.2", optional = true }
rand = "0.9.2"
launchpadlib = { version = ">=0.4.6,<0.6", optional = true }

[workspace]
members = [ "svp-client", "svp-py" ]

[features]
default = ["debian", "detect-update-changelog", "cli"]
debian = ["dep:debversion", "dep:flate2", "dep:reqwest", "dep:debian-control", "breezyshim/debian", "dep:debian-analyzer", "dep:xdg"]
gpg = ["dep:gpgme"]
last-attempt-db = ["dep:trivialdb"]
detect-update-changelog = ["debian"]
cli = ["dep:clap", "dep:env_logger"]
launchpad = ["dep:launchpadlib"]

[package.metadata.all-features]
# Only test specific feature combinations
only_include_features = [
    [],  # No features
    ["default"],  # Default features
    ["debian"],  # Just debian
    ["debian", "gpg"],  # Debian with GPG
    ["debian", "launchpad"],  # Debian with Launchpad
    ["debian", "last-attempt-db"],  # Debian with database
    ["cli"],  # Just CLI
]

[dependencies.serde]
workspace = true
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.breezyshim]
workspace = true
features = ["launchpad"]

[dependencies.debversion]
version = ">=0.1"
features = ["python-debian", "serde"]
optional = true

[dependencies.url]
workspace = true
features = [ "serde",]

[dev-dependencies]
serial_test = "3"

[workspace.dependencies]
serde_json = "1"
tera = "1"
serde = "1"
breezyshim = "0.7.1"
#breezyshim = { path = "../breezyshim/trunk" }
url = "2"
debian-changelog = "0.2"
env_logger = ">=0.10"
clap = "4"

[[bin]]
name = "svp"
required-features = ["cli"]

[[bin]]
name = "debian-svp"
required-features = ["debian", "cli"]
