[package]
name = "silver-platter"
version = "0.8.4"
authors = [ "Jelmer Vernooĳ <jelmer@jelmer.uk>",]
edition = "2021"
license = "GPL-2.0+"
description = "Large scale VCS change management"
repository = "https://github.com/jelmer/silver-platter.git"
homepage = "https://github.com/jelmer/silver-platter"
default-run = "svp"
categories = ["development-tools"]

[dependencies]
tempfile = "3"
serde_yaml = "0.9"
log = "0.4"
percent-encoding = "2"
chrono = "0.4"
regex = "1"
debian-changelog = { workspace = true }
tera.workspace = true
clap = { workspace = true, optional = true, features = ["derive", "env"] }
shlex = "1"
env_logger = { workspace = true, optional = true }
trivialdb = { version = "0.1.7", optional = true }
flate2 = { version = "1", optional = true }
reqwest = { version = ">=0.12,<0.14", optional = true, features = ["blocking"] }
lazy-regex = "3"
libc = "0.2"
xdg = { version = "3.0", optional = true }
debian-analyzer = { version = "0.160.14", optional = true }
sequoia-openpgp = { version = "2", optional = true, default-features = false, features = ["compression", "crypto-nettle"] }
lazy_static = "1.5.0"
debian-control = { version = ">=0.2,<0.4", optional = true }
rand = "0.9.2"
launchpadlib = { version = ">=0.4.6,<0.6", optional = true }
rmcp = { version = ">=1", optional = true, features = ["server", "transport-io"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }

[workspace]
members = [ "svp-client", "svp-py" ]

[features]
default = ["debian", "detect-update-changelog", "cli"]
debian = ["dep:debversion", "dep:flate2", "dep:reqwest", "dep:debian-control", "breezyshim/debian", "dep:debian-analyzer", "dep:xdg"]
gpg = ["dep:sequoia-openpgp"]
last-attempt-db = ["dep:trivialdb"]
detect-update-changelog = ["debian"]
cli = ["dep:clap", "dep:env_logger"]
mcp = ["dep:rmcp", "dep:tokio", "cli"]
mcp-sse = ["mcp", "dep:axum", "dep:tokio-util", "rmcp/transport-streamable-http-server", "tokio/net"]
launchpad = ["dep:launchpadlib"]

[dependencies.serde]
workspace = true
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.breezyshim]
workspace = true
features = ["launchpad"]

[dependencies.debversion]
version = ">=0.1"
features = ["python-debian", "serde"]
optional = true

[dependencies.url]
workspace = true
features = [ "serde",]

[dev-dependencies]
serial_test = "3"

[workspace.dependencies]
serde_json = "1"
tera = "1"
serde = "1"
breezyshim = "0.7.11"
#breezyshim = { path = "../breezyshim/trunk" }
url = "2"
debian-changelog = "0.2"
env_logger = ">=0.10"
clap = "4"

[[bin]]
name = "svp"
required-features = ["cli"]

[[bin]]
name = "debian-svp"
required-features = ["debian", "cli"]
