[metadata]
name = silver-platter
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
url = https://jelmer.uk/code/silver-platter
description = Large scale VCS change management
long_description = file:README.rst
version = attr:silver_platter.__version__
license = GNU GPL v2 or later
project_urls = 
	Bug Tracker=https://github.com/jelmer/silver-platter/issues
	Repository=https://github.com/jelmer/silver-platter
	GitHub=https://github.com/jelmer/silver-platter
keywords = git bzr vcs github gitlab launchpad
classifiers = 
	Development Status :: 3 - Alpha
	License :: OSI Approved :: GNU General Public License (GPL)
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Operating System :: POSIX
	Topic :: Software Development :: Version Control

[options]
python_requires = >=3.7
packages = 
	silver_platter
	silver_platter.debian
install_requires = 
	breezy>=3.3.1
	dulwich>=0.20.23
	jinja2
	pyyaml
tests_require = 
	testtools
	debmutate>=0.3
	python-debian
	brz-debian

[options.entry_points]
console_scripts = 
	svp=silver_platter.__main__:main
	debian-svp=silver_platter.debian.__main__:main

[options.extras_require]
debian = 
	debmutate>=0.3
	python_debian>=0.1.48
	brz-debian
launchpad = launchpadlib
detect-gbp-dch = lintian-brush

[options.package_data]
silver_platter = 
	py.typed

[flake8]
filename = *.py,svp
exclude = *_pb2.py,.eggs
banned-modules = dulwich.* = Don't use dulwich directly

[mypy]
ignore_missing_imports = True

[egg_info]
tag_build = 
tag_date = 0

