[package]
name = "svp-py"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/jelmer/silver-platter.git"
homepage = "https://github.com/jelmer/silver-platter"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
debian = ["silver-platter/debian"]
extension-module = ["pyo3/extension-module"]
default = ["debian"]

[dependencies]
silver-platter = { path = "../..", default-features = false, features = ["pyo3"] }
pyo3 = { workspace = true, features = ["abi3"] }
pyo3-log = { workspace = true }
tera = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true, features = ["serde"] }
breezyshim = { workspace = true }
debian-changelog = { workspace = true }
pyo3-filelike = "0.3.0"

[package.metadata.cargo-all-features]
denylist = ["extension-module"]
